enh: cleaned up all compiler warnings